<resources>
    <string name="app_name">TravelApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="TRAVELA">TRAVELA</string>
    <string name="register">register</string>
    <string name="Full_name">Full name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign In!</string>
    <string name="Sign">"sign in "</string>
    <string name="sign_in">"sign in "</string>
    <string name="forgot">Forgot a password?</string>
    <string name="bucketlist">Bucket list</string>
    <string name="Visited">Visited places</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="Choose">Choose your destination</string>
    <string name="Result">Suggestions for your perfect vacation</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_survey_c">SurveyActivityC</string>
    <string name="Logout">Logout</string>
</resources>