<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.travelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_bucket_list"
        android:name="com.example.travelapp.BucketListFragment"
        android:label="@string/bucketlist"
        tools:layout="@layout/bucketlist_fragment" />

    <fragment
        android:id="@+id/nav_choose_destination"
        android:name="com.example.travelapp.ui.choose_destination.ChooseDestinationFragment"
        android:label="@string/Choose"
        tools:layout="@layout/choose_destination_fragment" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.travelapp.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

</navigation>