<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground"
        android:foregroundTint="@color/material_on_surface_disabled"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="59dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/david_libre_bold"
        android:text="@string/TRAVELA"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/david_libre_bold"
        android:text="sign in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/dark_cyan"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />


    <EditText
        android:id="@+id/si_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/sky_blue"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:fontFamily="@font/david_libre_bold"
        android:hint="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/dark_cyan"
        android:textColorHint="@color/dark_cyan"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".9"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/si_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:backgroundTint="@color/sky_blue"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:fontFamily="@font/david_libre_bold"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/dark_cyan"
        android:textColorHint="@color/dark_cyan"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent=".9"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/show_hide_pwd"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginStart="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:fontFamily="@font/david_libre_bold"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textColor="@color/dark_cyan"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_btn_round"
        android:padding="14dp"
        android:fontFamily="@font/david_libre_bold"
        android:text="@string/Sign_In"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent=".6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Don't have an account?"
        android:fontFamily="@font/david_libre_bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX=".5"
        android:scaleY=".5"
        />

    <TextView
        android:id="@+id/register_btn_si"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="287dp"
        android:fontFamily="@font/david_libre_bold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/dark_cyan"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />


</androidx.constraintlayout.widget.ConstraintLayout>